// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiButtonEmpty is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButtonEmpty testClass1 testClass2 emotion-euiButtonEmpty-empty-primary"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButtonEmpty props color accent is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-accent"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color danger is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-danger"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color ghost is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-text"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color primary is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color success is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-success"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color text is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-text"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props color warning is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-warning"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props contentProps is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-primary"
  type="button"
>
  <span
    aria-label="aria-label"
    class="euiButtonEmpty__content testClass1 testClass2 emotion-euiButtonDisplayContent"
    data-test-subj="test subject string"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButtonEmpty props flush both is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--flushBoth emotion-euiButtonEmpty-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props flush left is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--flushLeft emotion-euiButtonEmpty-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props flush right is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--flushRight emotion-euiButtonEmpty-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props href secures the rel attribute when the target is _blank 1`] = `
<a
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</a>
`;

exports[`EuiButtonEmpty props iconSide left is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      color="inherit"
      data-euiicon-type="user"
    />
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`EuiButtonEmpty props iconSide right is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    >
      Content
    </span>
    <span
      color="inherit"
      data-euiicon-type="user"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props iconType is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      color="inherit"
      data-euiicon-type="user"
    />
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isDisabled is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-disabled"
  disabled=""
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isDisabled renders a button even when href is defined 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-disabled"
  disabled=""
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isDisabled renders if passed simply as disabled 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-disabled"
  disabled=""
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isLoading is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-disabled"
  disabled=""
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      aria-label="Loading"
      class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
      role="progressbar"
      style="border-color:#07C currentcolor currentcolor currentcolor"
    />
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isSelected is rendered as false 1`] = `
<button
  aria-pressed="false"
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props isSelected is rendered as true 1`] = `
<button
  aria-pressed="true"
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props size m is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props size s is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--small emotion-euiButtonEmpty-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props size xs is rendered 1`] = `
<button
  class="euiButtonEmpty euiButtonEmpty--xSmall emotion-euiButtonEmpty-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      class="eui-textTruncate euiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`EuiButtonEmpty props textProps is rendered 1`] = `
<button
  class="euiButtonEmpty emotion-euiButtonEmpty-empty-primary"
  type="button"
>
  <span
    class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
  >
    <span
      aria-label="aria-label"
      class="eui-textTruncate euiButtonEmpty__text testClass1 testClass2"
      data-test-subj="test subject string"
    >
      Content
    </span>
  </span>
</button>
`;
